# password_manager

./: .gitignore
.cargo/: .global-cache
agent_developer_project/: CLAUDE.md  Cargo.toml  README.md
agent_developer_project/.claude/commands/: agent-fix.md  finish.md  fix-agents.md  instructions.md  interactive-mode.md  make-path-interactive.md  refactor.md  template.md
agent_developer_project/agent-team-output-2026-02-18-20-44-59/: Cargo.toml  README.md
agent_developer_project/agent-team-output-2026-02-18-20-44-59/src/: main.rs
agent_developer_project/context/: business-info.md  current-data.md  personal-info.md  strategy.md
agent_developer_project/plans/: 2026-02-17-add-brain-chips-command.md  2026-02-17-add-finish-command.md  2026-02-17-add-installable-path-command.md  2026-02-17-add-instructions-command.md  2026-02-17-add-interactive-mode-command.md  2026-02-17-add-project-testing-command.md  2026-02-17-add-template-command.md  2026-02-17-fix-command-and-ui-overhaul.md  2026-02-17-make-path-interactive.md  2026-02-17-rust-multi-agent-coding-system.md  2026-02-18-add-refactor-command.md  2026-02-18-agent-fix-command.md  2026-02-18-fix-agents-command.md
agent_developer_project/scripts/: install.sh
agent_developer_project/src/: ai_client.rs  file_writer.rs  main.rs  messages.rs  pipeline.rs  task.rs  thinking.rs
agent_developer_project/src/agents/: coder.rs  coordinator.rs  debugger.rs  mod.rs  planner.rs  reviewer.rs  validator.rs
password_manager/: .gitignore  ARCHITECTURE.md  Cargo.toml  EXPANSION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROGRESS.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  UPLOAD_INSTRUCTIONS.txt  USAGE.md  push-to-github.sh
password_manager/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
password_manager/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
password_manager/src/: analytics.rs  cli.rs  crypto.rs  errors.rs  main.rs  models.rs  vault.rs
password_manager/src/security/: breach.rs  mod.rs  strength.rs  totp.rs
password_manager/tests/: integration_test.rs
soccer-flowchart/: Makefile  README.md  requirements.txt  soccer_roadmap_flowchart.dot  soccer_roadmap_flowchart.py
soccer_game/: .gitignore  BUGFIXES.md  CHANGES.md  Cargo.toml  GAMEPLAY_GUIDE.md  Makefile  README.md  THROW_IN_SYSTEM.md  sfml_test.cpp
(+15 files in other folders)
