[package]
name = "agent-team"
version = "0.1.0"
edition = "2021"
description = "A multi-agent coding assistant built in Rust"
authors = ["Jashan"]

[[bin]]
name = "agent-team"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
