[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A secure CLI password manager with AES-256-GCM encryption"
license = "MIT"

[dependencies]
# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
rpassword = "7.3"
colored = "2.1"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Clipboard
cli-clipboard = "0.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
