[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A secure CLI password manager with AES-256-GCM encryption"
license = "MIT"

[dependencies]
# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
totp-lite = "2.0"
sha1 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
rpassword = "7.3"
colored = "2.1"
dialoguer = "0.11"
comfy-table = "7.1"
indicatif = "0.17"
console = "0.15"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
humantime = "2.1"
fuzzy-matcher = "0.3"

# Clipboard
cli-clipboard = "0.4"

# Password strength
zxcvbn = "3.1"

# Configuration
config = "0.14"
toml = "0.8"

# Utilities
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
